@@ -4,6 +4,7 @@ chrome-type-ahead (0.2) unstable; urgency=low
   * Consider also 'visibility: hidden' CSS as non-matchable elements 
   * Do not start search on element with 'contenteditable' attribute enabled
   * Add sites blacklist
+  * Add alternative / to start primary mode (but only way for blacklisted sites)
 
  --  <tokland@gmail.com>  Thu, 31 Dec 2009 20:26:52 +0100
 
